src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Two_Yr_Extension__c</fullName>
        <description>##Conga created btn:00b0P000001EVsj</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a1N0P000004eG04,a1NU0000004pNEx&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P00000BPuXJ&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=AvP Invoice and Extension - &quot; + Name + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;emailtoid=003U000000x5mIa&quot; + 
&quot;&amp;emailadditionalto=craig@aviationportfolio.com; luke@aviationportfolio.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Two Yr Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X30_Days_to_Close__c</fullName>
        <formula>Term_Start_Date__c -30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30 Days to Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X60_Days_to_Close__c</fullName>
        <formula>Term_Start_Date__c -60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>60 Days to Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X90_days_to_close__c</fullName>
        <formula>Term_Start_Date__c -90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 days to close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <formula>IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,01,01),
YEAR( TODAY() ) -1,
YEAR( TODAY() )
),01,01)) &gt;= (CloseDate - DATE( (IF( CloseDate &lt; DATE( YEAR( CloseDate ) ,01,01),
YEAR( CloseDate ) -1,
YEAR( CloseDate ) )
),01,01)) ,
1,
IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,01,01),
YEAR( TODAY() ) -2,
YEAR( TODAY() )
),01,01)) &gt;= (CloseDate - DATE( (IF( CloseDate &lt; DATE( YEAR( CloseDate ) ,01,01),
YEAR( CloseDate ) -2,
YEAR( CloseDate ) )
),01,01)) ,
2,
0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Term_Extension_End__c</fullName>
        <formula>DATE((year(  Year_1_Term_Extension_Start__c  )+1), 
month(Year_1_Term_Extension_Start__c ),(DAY(Year_1_Term_Extension_Start__c )))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 Term Extension End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_1_Term_Extension_Start__c</fullName>
        <formula>Next_Agreement_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 Term Extension Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_2_End_Date__c</fullName>
        <formula>DATE((year( Year_2_Start_Date__c )+1), 
month(Year_2_Start_Date__c ),(DAY(Year_2_Start_Date__c )))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_2_Start_Date__c</fullName>
        <formula>Term_End_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_2_Term_Extension_End__c</fullName>
        <formula>DATE((year( Year_1_Term_Extension_Start__c )+2), 
month(Year_1_Term_Extension_Start__c ),(DAY(Year_1_Term_Extension_Start__c )))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Term Extension End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_2_Term_Extension_Start__c</fullName>
        <formula>DATE((year( Year_1_Term_Extension_Start__c )+1), 
month(Year_1_Term_Extension_Start__c ),(DAY(Year_1_Term_Extension_Start__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Term Extension Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_3_End_Date__c</fullName>
        <formula>DATE((year(Term_Start_Date__c)+3), 
month(Term_Start_Date__c),(DAY(Term_Start_Date__c)))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_3_Start_Date__c</fullName>
        <formula>Year_2_End_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Ryan</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jeff</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Dan</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Craig</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Won - 24 Months,Closed Won - 36 Months</value>
        </filters>
        <label>Sales Team Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Craig</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Dan</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Opportunities</label>
        <sharedTo>
            <group>Craig_Ross</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Craig_Dan</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>Daniel Harris</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business - Referral,New Business - Cold</value>
        </filters>
        <label>Craig Dan</label>
        <sharedTo>
            <group>Craig_Ross</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Opportunity_Next_Step__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Pipeline_Clients</fullName>
        <columns>FSTR__Contact_BPM__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.FISCAL_PERIOD</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:24</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>contains</operation>
            <value>Existing Business - Collection,Existing Business - Renewal</value>
        </filters>
        <label>Opportunity Pipeline - Clients</label>
    </listViews>
    <listViews>
        <fullName>Sales_Team_Opportunities</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Ryan</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jeff</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Dan</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Craig</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Won - 24 Months,Closed Won - 36 Months</value>
        </filters>
        <label>Sales Team Opportunities</label>
    </listViews>
    <listViews>
        <fullName>WAC_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products__c</field>
            <operation>equals</operation>
            <value>Whole Aircraft</value>
        </filters>
        <label>WAC Opportunities</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Require_Vendors_upon_Closed_Won</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Operator_Program_Name__c  )&amp;&amp;
ISPICKVAL( StageName , &quot;Closed Won&quot;)&amp;&amp;
 Operator_Program_not_required__c =False</errorConditionFormula>
        <errorDisplayField>Operator_Program_Name__c</errorDisplayField>
        <errorMessage>You must have a value selected before moving to Closed Won</errorMessage>
    </validationRules>
</CustomObject>